--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -322,6 +322,7 @@ header.sticky {
   display: grid;
   gap: 1.875rem;
   justify-content: center;
+  align-content: center;
   position: relative;
   grid-template:
     'card1' auto
@@ -664,9 +665,9 @@ header.sticky {
 
 .service__tealca {
   grid-area: tea;
-  width: 70%;
-  height: 70%;
-  transform: translateX(21%);
+  width: 60%;
+  height: 60%;
+  transform: translateX(31%);
 }
 
 .serv__cont1 {
@@ -763,9 +764,10 @@ header.sticky {
     gap: 0.75rem;
     padding: 2.5rem;
     grid-template:
-      'logo p p p' auto
+      'logo logo p p' auto
       '. . . .' 25px
-      'moto zoo mrw tea' auto;
+      'moto moto zoo zoo' auto
+      'mrw mrw tea tea' auto;
   }
 
   .service__grid2 {
@@ -788,9 +790,31 @@ header.sticky {
   html {
     font-size: 18;
   }
+
+  .service__grid {
+    position: relative;
+    display: grid;
+    justify-content: space-around;
+    align-content: center;
+    text-align: center;
+    gap: 0.75rem;
+    padding: 2.5rem;
+    grid-template:
+      'logo logo p p' auto
+      '. . . .' 25px
+      'moto mrw zoo tea' auto;
+  }
 }
 
 // SECCIÓN NOSOTROS  *************************************
+#nosotros {
+  display: block;
+
+  p {
+    padding: 20px 20px 20px 30px;
+  }
+}
+
 .nost__h2 {
   font-weight: bold;
   font-size: 2rem;
@@ -801,38 +825,39 @@ header.sticky {
   padding: 1.25rem;
 }
 
-.nost__p {
+.nost__contp {
+  grid-area: p;
   font-weight: normal;
   font-size: 14px;
   letter-spacing: 0.01em;
   line-height: 43px;
   text-align: left;
   color: $color-parr;
-  padding: 30px;
 }
 
 .nost__contcirc {
+  grid-area: circ;
   position: relative;
-  width: 20.375rem;
-  height: 20.375rem;
-  transform: translateX(12%);
+  width: 80%;
+  height: 80%;
+  transform: translateX(20%);
 
   .nost__contimg {
     position: absolute;
-    width: 12rem;
-    height: 11.375rem;
+    width: 50%;
+    height: 50%;
     filter: drop-shadow(0px 8px 16px rgba(0, 0, 0, 0.4));
   }
 }
 
-.nost__p2 {
+.nost__contp2 {
+  grid-area: p2;
   font-weight: normal;
   font-size: 14px;
   letter-spacing: 0.01em;
   line-height: 43px;
   text-align: right;
   color: $color-parr;
-  padding: 30px;
 
   span {
     color: $color-prim;
@@ -841,19 +866,33 @@ header.sticky {
 }
 
 .nost__contblob {
-  display: flex;
+  grid-area: blob;
   position: relative;
-  justify-content: center;
-  width: 18.5rem;
-  height: 11.9875rem;
-  margin-bottom: 50px;
-  transform: translateX(16%);
+  width: 80%;
+  height: 80%;
+  transform: translateX(20%);
+  margin-bottom: 60px;
 
   .nost__contfig {
     position: absolute;
-    width: 8.5813rem;
-    height: 10.7531rem;
+    width: 45%;
+    height: 45%;
+    transform: translateX(50%);
   }
+}
+
+.nost__grid {
+  display: grid;
+  justify-content: space-around;
+  text-align: center;
+  align-content: center;
+  gap: 1rem;
+  padding: 0.625rem;
+  grid-template:
+    'p' auto
+    'circ' auto
+    'p2' auto
+    'blob' auto;
 }
 
 // NOSOTROS - PANTALLA DE TABLET ***************************************
@@ -862,99 +901,136 @@ header.sticky {
     font-size: 18;
   }
 
+  #nosotros {
+    p {
+      padding: 40px 50px 40px 70px;
+    }
+  }
+
   .nost__contp {
     width: 40.75rem;
     height: 19rem;
 
     .nost__p {
       font-size: 1rem;
-      padding: 20px;
     }
   }
 
   .nost__contcirc {
-    width: 26.625rem;
-    height: 26.625rem;
-    transform: translateX(71%);
-    top: 40px;
+    width: 50%;
+    height: 50%;
+    padding: 30px;
+    transform: translate(90%, 40%);
 
     .nost__contimg {
-      width: 15rem;
-      height: 14.8125rem;
+      width: 50%;
+      height: 50%;
     }
   }
 
   .nost__contp2 {
-    width: 33.125rem;
-    height: 13.0625rem;
+    width: 40.75rem;
+    height: 12rem;
 
     .nost__p2 {
-      position: absolute;
       font-size: 1rem;
-      padding: 40px;
-      top: 61%;
     }
   }
 
   .nost__contblob {
-    width: 24.75rem;
-    height: 18.2375rem;
-    transform: translateX(0%);
+    width: 50%;
+    height: 50%;
+    padding: 20px;
+    transform: translatex(20%);
 
     .nost__contfig {
-      width: 11.7063rem;
-      height: 13.8781rem;
+      width: 43%;
+      height: 43%;
+      transform: translateX(50%);
     }
   }
+
+  .nost__grid {
+    display: grid;
+    justify-content: space-around;
+    text-align: center;
+    align-content: center;
+    gap: 1rem;
+    padding: 0.625rem;
+    grid-template:
+      'p p' auto
+      'circ circ' auto
+      'p2 p2' auto
+      'blob blob' auto;
+  }
 }
+
 // NOSOTROS - PANTALLA DE PC ***************************************
 @media screen and (min-width: 992px) {
   html {
     font-size: 20;
   }
 
+  #nosotros {
+    p {
+      padding: 40px 120px 40px 120px;
+    }
+  }
+
   .nost__contp {
-    width: 47rem;
-    height: 12.75rem;
+    width: 60.75rem;
+    height: 17rem;
 
     .nost__p {
       font-size: 1rem;
-      padding: 40px;
     }
   }
 
   .nost__contcirc {
-    width: 26.625rem;
-    height: 26.625rem;
-    transform: translateX(137%);
+    width: 40%;
+    height: 40%;
+    transform: translateX(130%);
 
     .nost__contimg {
-      width: 15rem;
-      height: 14.8125rem;
+      width: 60%;
+      height: 60%;
+      padding: auto;
     }
   }
 
   .nost__contp2 {
-    width: 26.875rem;
-    height: 13.0625rem;
+    width: 60.75rem;
+    height: 12rem;
 
     .nost__p2 {
-      position: absolute;
       font-size: 1rem;
-      padding: 40px;
-      top: 60%;
     }
   }
 
   .nost__contblob {
-    width: 24.75rem;
-    height: 18.2375rem;
-    transform: translateX(0%);
+    width: 40%;
+    height: 40%;
 
     .nost__contfig {
-      width: 11.7063rem;
-      height: 13.8781rem;
+      width: 45%;
+      height: 45%;
+      transform: translateX(50%);
+      padding: auto;
     }
+  }
+
+  .nost__grid {
+    display: grid;
+    justify-content: space-around;
+    text-align: center;
+    align-content: center;
+    gap: 1rem;
+    padding: 0.625rem;
+    grid-template:
+      'p p' auto
+      'circ circ' auto
+      'p2 p2' auto
+      'blob blob' auto;
   }
 }
 
@@ -966,7 +1042,7 @@ header.sticky {
   }
 
   p {
-    padding: 30px;
+    padding: 20px;
   }
 }
 
@@ -991,15 +1067,12 @@ header.sticky {
 
 .misi__tit {
   font-weight: bold;
-  font-size: 80px;
+  font-size: 70px;
   letter-spacing: 0.02em;
   line-height: 68px;
   text-align: left;
   color: $color-prim;
   opacity: 0.2;
-  writing-mode: sideways-lr;
-  -webkit-writing-mode: sideways-lr;
-  -ms-writing-mode: sideways-lr;
 }
 
 .misi__p2 {
@@ -1011,34 +1084,26 @@ header.sticky {
   color: $color-parr;
 }
 
-.misi__contit2 {
-  display: flex;
-  justify-content: right;
-}
-
 .misi__tit2 {
   font-weight: bold;
-  font-size: 80px;
+  font-size: 70px;
   letter-spacing: 0.02em;
   line-height: 68px;
-  text-align: left;
+  // text-align: right;
   color: $color-prim;
   opacity: 0.2;
-  writing-mode: sideways-lr;
-  -webkit-writing-mode: sideways-lr;
-  -ms-writing-mode: sideways-lr;
 }
 
 .misi__contrect {
   position: relative;
   width: 18.5rem;
   height: 8.1875rem;
-  transform: translateX(20%);
+  transform: translateX(15%);
   margin-bottom: 20px;
-}
 
-.misi__contfig {
-  position: absolute;
+  .misi__contfig {
+    position: absolute;
+  }
 }
 
 // MISIÓN - PANTALLA DE TABLET ***************************************
@@ -1047,17 +1112,21 @@ header.sticky {
     font-size: 18;
   }
 
+  .misi__tit2 {
+    transform: translateX(50%);
+  }
+
   .misi__contrect {
     position: relative;
     width: 396px;
     height: 231px;
-    transform: translateX(43%);
-  }
+    transform: translateX(30%);
 
-  .misi__contfig {
-    position: absolute;
-    width: 396px;
-    height: 224.88px;
+    .misi__contfig {
+      position: absolute;
+      width: 396px;
+      height: 224.88px;
+    }
   }
 }
 
@@ -1067,17 +1136,21 @@ header.sticky {
     font-size: 20;
   }
 
+  .misi__tit2 {
+    transform: translateX(70%);
+  }
+
   .misi__contrect {
     position: relative;
     width: 596px;
     height: 431px;
-    transform: translateX(50%);
-  }
+    transform: translateX(40%);
 
-  .misi__contfig {
-    position: absolute;
-    width: 596px;
-    height: 424.88px;
+    .misi__contfig {
+      position: absolute;
+      width: 596px;
+      height: 424.88px;
+    }
   }
 }
 
@@ -1116,7 +1189,7 @@ header.sticky {
   font-size: 1rem;
   letter-spacing: 0.01em;
   line-height: 36px;
-  text-align: center;
+  text-align: right;
   color: $color-parr;
 }
 
@@ -1133,7 +1206,7 @@ header.sticky {
   font-size: 1rem;
   letter-spacing: 0.01em;
   line-height: 36px;
-  text-align: center;
+  text-align: left;
   color: $color-parr;
 }
 
@@ -1159,7 +1232,7 @@ header.sticky {
   font-size: 1rem;
   letter-spacing: 0.01em;
   line-height: 36px;
-  text-align: center;
+  text-align: right;
   color: $color-parr;
 }
 
@@ -1222,11 +1295,11 @@ header.sticky {
   }
 
   .cont__inst {
-    transform: translateX(110%);
+    transform: translateX(-40%);
   }
 
   .cont__what {
-    transform: translateX(100%);
+    transform: translateX(-10%);
   }
 
   .cont__fig {
@@ -1239,7 +1312,7 @@ header.sticky {
   .cont__phone {
     grid-area: phone;
     position: absolute;
-    transform: translateX(180%);
+    transform: translateX(130%);
     width: 14rem;
     height: 11.705rem;
     margin: 30px;
@@ -1265,8 +1338,6 @@ header.sticky {
     justify-content: center;
     text-align: center;
     grid-template:
-      // 'p p p'
-
       'fig p p'
       'p2 p2 p2'
       'face . inst'
@@ -1283,6 +1354,18 @@ header.sticky {
     font-size: 21;
   }
 
+  .cont__face {
+    transform: translateX(200%);
+  }
+
+  .cont__inst {
+    transform: translateX(40%);
+  }
+
+  .cont__what {
+    transform: translateX(90%);
+  }
+
   .cont__fig {
     grid-area: fig;
     transform: translateX(40%);
@@ -1293,7 +1376,7 @@ header.sticky {
   .cont__phone {
     grid-area: phone;
     position: absolute;
-    transform: translateX(320%);
+    transform: translateX(230%);
     width: 14rem;
     height: 11.705rem;
     margin: 30px;
@@ -1308,13 +1391,13 @@ header.sticky {
     justify-content: center;
     text-align: center;
     grid-template:
-      'fig p p'
-      'p2 p2 p2'
-      'face . inst'
-      'p3 p3 p3'
-      '. what .'
-      'phone phone phone'
-      'fig2 fig2 fig2';
+      'fig p p p'
+      'p2 p2 p2 p2'
+      'face . . inst'
+      'p3 p3 p3 p3'
+      '. what what .'
+      'phone phone phone phone'
+      'fig2 fig2 fig2 fig2';
   }
 }
 
