--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -844,8 +844,8 @@ header.sticky {
 
   .nost__contimg {
     position: absolute;
-    width: 50%;
-    height: 50%;
+    width: 70%;
+    height: 70%;
     filter: drop-shadow(0px 8px 16px rgba(0, 0, 0, 0.4));
   }
 }
@@ -920,11 +920,12 @@ header.sticky {
     width: 50%;
     height: 50%;
     padding: 30px;
-    transform: translate(90%, 40%);
+    transform: translate(90%, 20%);
 
     .nost__contimg {
-      width: 50%;
-      height: 50%;
+      width: 60%;
+      height: 60%;
+      transform: translateY(20%);
     }
   }
 
@@ -992,8 +993,8 @@ header.sticky {
     transform: translateX(130%);
 
     .nost__contimg {
-      width: 60%;
-      height: 60%;
+      width: 65%;
+      height: 65%;
       padding: auto;
     }
   }
@@ -1212,17 +1213,18 @@ header.sticky {
 
 .cont__face {
   grid-area: face;
-  transform: translateX(290%);
-  width: 2.625rem;
-  height: 2.625rem;
+  transform: translateX(200%);
+  width: 3.25rem;
+  height: 3.25rem;
   margin: 20px;
+  margin-bottom: 40px;
 }
 
 .cont__inst {
   grid-area: inst;
-  transform: translateX(290%);
-  width: 2.625rem;
-  height: 2.625rem;
+  transform: translateX(200%);
+  width: 3.25rem;
+  height: 3.25rem;
   margin: 20px;
 }
 
@@ -1238,9 +1240,9 @@ header.sticky {
 
 .cont__what {
   grid-area: what;
-  transform: translateX(290%);
-  width: 2.625rem;
-  height: 2.625rem;
+  transform: translateX(200%);
+  width: 3.25rem;
+  height: 3.25rem;
   margin: 20px;
 }
 
@@ -1295,7 +1297,7 @@ header.sticky {
   }
 
   .cont__inst {
-    transform: translateX(-40%);
+    transform: translateX(-60%);
   }
 
   .cont__what {
@@ -1359,7 +1361,7 @@ header.sticky {
   }
 
   .cont__inst {
-    transform: translateX(40%);
+    transform: translateX(0%);
   }
 
   .cont__what {
